[gd_scene load_steps=4 format=3 uid="uid://ct8v5xq2vxgum"]

[ext_resource type="Script" path="res://ux/GameUI.gd" id="1_y8k0s"]
[ext_resource type="Script" path="res://ux/GridContainer.gd" id="2_xe2ee"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_m38gs"]
blend_mode = 1

[node name="GameUI" type="Control"]
material = SubResource( "CanvasItemMaterial_m38gs" )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( "1_y8k0s" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLabels" type="VBoxContainer" parent="."]
offset_left = 30.0
offset_top = 30.0
offset_right = 110.0
offset_bottom = 116.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblFPS" type="Label" parent="DebugLabels"]
offset_right = 80.0
offset_bottom = 26.0
text = "fps"

[node name="lblMousePos" type="Label" parent="DebugLabels"]
offset_top = 30.0
offset_right = 80.0
offset_bottom = 56.0
text = "mousePos"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblRayTarget" type="Label" parent="DebugLabels"]
offset_top = 60.0
offset_right = 80.0
offset_bottom = 86.0
text = "rayTarget"

[node name="BuildButtons" type="GridContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.95
anchor_right = 0.05
anchor_bottom = 0.95
grow_vertical = 0
columns = 5
script = ExtResource( "2_xe2ee" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="BuildButtons"]
offset_right = 48.0
offset_bottom = 32.0
rect_min_size = Vector2(48, 32)
text = "gun"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="BuildButtons"]
offset_left = 52.0
offset_right = 100.0
offset_bottom = 32.0
rect_min_size = Vector2(48, 0)
text = "360"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="BuildButtons"]
offset_left = 104.0
offset_right = 152.0
offset_bottom = 32.0
rect_min_size = Vector2(48, 0)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="BuildButtons"]
offset_left = 156.0
offset_right = 204.0
offset_bottom = 32.0
rect_min_size = Vector2(48, 0)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="BuildButtons"]
offset_left = 208.0
offset_right = 256.0
offset_bottom = 32.0
rect_min_size = Vector2(48, 0)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeButtons" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 123.0
offset_top = -129.0
offset_right = 366.0
offset_bottom = -97.0
rect_min_size = Vector2(48, 32)
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UpgradeButtons"]
offset_right = 48.0
offset_bottom = 32.0
rect_min_size = Vector2(48, 0)

[node name="Button2" type="Button" parent="UpgradeButtons"]
offset_left = 52.0
offset_right = 100.0
offset_bottom = 32.0
rect_min_size = Vector2(48, 0)

[connection signal="resized" from="." to="." method="_on_control_resized"]
[connection signal="pressed" from="BuildButtons/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="BuildButtons/Button2" to="." method="_on_button_2_pressed"]
